drkns 09.01.2023 23:58:25 +0000 - build 206

1. gh-604: Process list plugin does not synchronize sort modes menu with sort order.

drkns 31.10.2022 17:38:11 +0000 - build 205

1. Continue 204.

drkns 29.10.2022 17:31:51 +0100 - build 204

1. More robust perf data read.

drkns 14.11.2021 18:48:42 +0000 - build 203

1. Move WMI refresh to a separate thread.

2. Fix other refresh-related issues.

drkns 29.06.2021 01:43:50 +0100 - build 202

1. Refresh the panel using ACTL_SYNCHRO.

drkns 25.10.2020 19:00:44 +0000 - build 201

1. An attempt to fix M#0003823 - performance counters can't be read on localised OS.

drkns 20.09.2020 01:27:58 +0100 - build 200

1. Various sort menu fixes and improvements.

2. Minor corrections.

drkns 23.04.2020 01:45:14 +0300 - build 199

1. Некорректное отображение имен некоторых хендлов.

drkns 19.04.2020 01:44:38 +0300 - build 198

1. Продолжение 197.

drkns 18.04.2020 18:47:55 +0300 - build 197

1. Рефакторинг. Том III. Используем fmt вместо printf.

drkns 17.04.2020 20:21:44 +0300 - build 196

1. Forum: Process List plugin does not show environment and command line
   x86 версия чудовищно работала в WOW64.

drkns 17.04.2020 03:04:16 +0300 - build 195

1. Добавлено получение командной строки через WMI.

drkns 16.04.2020 19:38:03 +0300 - build 194

1. В 193 отвалилось получение битности процессов.

2. Не работало отображение _Total.

drkns 11.04.2020 03:32:43 +0300 - build 193

1. Рефакторинг. Том II.

2. Ещё кое-где сняты ограничения на длину строк.

3. Поддержка float-форматирования размеров в стиле Far.

4. Исправлены баги, как новые, так и старые.

drkns 01.04.2020 23:49:29 +0300 - build 192

1. Рефакторинг. Том I.

2. Форматирование.

3. Во многих местах сняты ограничения на длину строк.

4. Не работало отображение хендлов.

5. Неправильно рассчитывался аптайм процессов.

6. Не работала индикация режима сортировки.

drkns 25.03.2020 10:32:35 +0200 - build 191

1. Incorrect COM initialisation.
