@@ -1302,10 +1302,23 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 	if (Rec->EventType != KEY_EVENT)
 		return FALSE;
 
-	int Key = Rec->Event.KeyEvent.wVirtualKeyCode;
-	unsigned int ControlState = Rec->Event.KeyEvent.dwControlKeyState;
+	const auto Key = Rec->Event.KeyEvent.wVirtualKeyCode;
+	const auto ControlState = Rec->Event.KeyEvent.dwControlKeyState;
 
-	if ((ControlState & (LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED)) && Key == L'R')
+	const auto check_control = [ControlState](unsigned const Mask)
+	{
+		constexpr auto ValidMask =
+			RIGHT_ALT_PRESSED | LEFT_ALT_PRESSED |
+			RIGHT_CTRL_PRESSED | LEFT_CTRL_PRESSED |
+			SHIFT_PRESSED;
+
+		const auto FilteredControlState = ControlState & ValidMask;
+		const auto OtherKeys = ValidMask & ~Mask;
+
+		return (FilteredControlState & Mask) && !(FilteredControlState & OtherKeys);
+	};
+
+	if (check_control(LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED) && Key == L'R')
 	{
 		pPerfThread->SmartReread();
 		return FALSE;
@@ -1344,7 +1357,7 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 
 		return TRUE;
 	}
-	else if (ControlState == SHIFT_PRESSED && Key == VK_F3)
+	else if (check_control(SHIFT_PRESSED) && Key == VK_F3)
 	{
 		PanelInfo pi{ sizeof(PanelInfo) };
 		PsInfo.PanelControl(this, FCTL_GETPANELINFO, 0, &pi);
@@ -1399,7 +1412,7 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 
 		return TRUE;
 	}
-	else if (ControlState == 0 && Key == VK_F6)
+	else if (check_control(0) && Key == VK_F6)
 	{
 		{
 			wchar_t Host[1024] = {};
@@ -1452,7 +1465,7 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 		Reread();
 		return TRUE;
 	}
-	else if (ControlState == SHIFT_PRESSED && Key == VK_F6)
+	else if (check_control(SHIFT_PRESSED) && Key == VK_F6)
 	{
 		// go to local host
 		pPerfThread = {};
@@ -1506,7 +1519,7 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 	}
 
 #endif
-	else if (ControlState == SHIFT_PRESSED && (Key == VK_F1 || Key == VK_F2) && (HostName.empty() || Opt.EnableWMI))
+	else if (check_control(SHIFT_PRESSED) && (Key == VK_F1 || Key == VK_F2) && (HostName.empty() || Opt.EnableWMI))
 	{
 		//lower/raise priority class
 		PanelInfo PInfo = { sizeof(PanelInfo) };
@@ -1650,7 +1663,7 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 		Config();
 		return TRUE;*/
 	}
-	else if ((ControlState & (LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED)) && Key == L'F')
+	else if (check_control(LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED) && Key == L'F')
 	{
 		PanelInfo pi = { sizeof(PanelInfo) };
 		PsInfo.PanelControl(this, FCTL_GETPANELINFO, 0, &pi);
@@ -1674,28 +1687,35 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 
 		return TRUE;
 	}
-	else if ((ControlState & (LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED)) && Key == VK_F12)
+	else if (check_control(LEFT_CTRL_PRESSED | RIGHT_CTRL_PRESSED) && (Key >= VK_F3 && Key <= VK_F12))
 	{
+		if (
+			Key == VK_F5 || // Write time
+			Key == VK_F9    // Access time
+			)
+			return TRUE;
+
 		static const struct
 		{
 			unsigned id;
 			unsigned SortMode;
+			unsigned Key;
 			bool InvertByDefault;
 		}
 		StaticItems[]
 		{
-			{MSortByName,           SM_NAME,                 false, },
-			{MSortByExt,            SM_EXT,                  false, },
-			{MSortBySize,           SM_SIZE,                 true,  },
-			{MSortByUnsorted,       SM_UNSORTED,             false, },
-			{MSortByTime,           SM_CTIME,                true,  },
-			{MSortByDescriptions,   SM_DESCR,                false, },
-			{MSortByOwner,          SM_OWNER,                false, },
-			//{MPageFileBytes,        SM_COMPRESSEDSIZE        true,  },
-			{MTitlePID,             SM_PROCLIST_PID,         true,  },
-			{MTitleParentPID,       SM_PROCLIST_PARENTPID,   true,  },
-			{MTitleThreads,         SM_NUMLINKS,             true,  },
-			{MTitlePriority,        SM_PROCLIST_PRIOR,       true   },
+			{MSortByName,           SM_NAME,                 VK_F3,  false, },
+			{MSortByExt,            SM_EXT,                  VK_F4,  false, },
+			{MSortBySize,           SM_SIZE,                 VK_F6,  true,  },
+			{MSortByUnsorted,       SM_UNSORTED,             VK_F7,  false, },
+			{MSortByTime,           SM_CTIME,                VK_F8,  true,  },
+			{MSortByDescriptions,   SM_DESCR,                VK_F10, false, },
+			{MSortByOwner,          SM_OWNER,                VK_F11, false, },
+			//{MPageFileBytes,        SM_COMPRESSEDSIZE,       0,      true,  },
+			{MTitlePID,             SM_PROCLIST_PID,         0,      true,  },
+			{MTitleParentPID,       SM_PROCLIST_PARENTPID,   0,      true,  },
+			{MTitleThreads,         SM_NUMLINKS,             0,      true,  },
+			{MTitlePriority,        SM_PROCLIST_PRIOR,       0,      true   },
 			//{0,-1},
 			//{MUseSortGroups,0},
 			//{MShowSelectedFirst,-1}
@@ -1705,6 +1725,21 @@ int Plist::ProcessKey(const INPUT_RECORD* Rec)
 		PsInfo.PanelControl(this, FCTL_GETPANELINFO, 0, &pi);
 
 		const auto Reversed = (pi.Flags & PFLAGS_REVERSESORTORDER) != 0;
+
+		if (Key != VK_F12)
+		{
+			const auto CurrentSortMode = SortMode;
+			const auto& StaticItem = std::find_if(std::cbegin(StaticItems), std::cend(StaticItems), [Key](const auto& i) { return i.Key == Key; });
+
+			SortMode = StaticItem->SortMode;
+			PsInfo.PanelControl(this, FCTL_SETSORTMODE, SortMode, {});
+
+			const auto SameSelected = SortMode == CurrentSortMode;
+			PsInfo.PanelControl(this, FCTL_SETSORTORDER, SameSelected? !Reversed : StaticItem->InvertByDefault, {});
+
+			return TRUE;
+		}
+
 		const auto cIndicator = Reversed? L'▼' : L'▲';
 		const auto KnownSortingSlot =
 			pi.SortMode == FarSortModeSlot ||
