@@ -1,3 +1,7 @@
+drkns 10.01.2023 17:41:03 +0000 - build 207
+
+1. gh-604 again.
+
 drkns 09.01.2023 23:58:25 +0000 - build 206
 
 1. gh-604: Process list plugin does not synchronize sort modes menu with sort order.
